# MeetTheRobinsons

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md
Game/: coop-client.bat  coop-host.bat
docs/: ARCHITECTURE.md  AUTONOMOUS_TESTING.md  COOP_METHODOLOGY.md  COOP_SCOPE.md  REVERSE_ENGINEERING.md  ROADMAP.md  SECUROM.md  decouple-saves.md  decouple-test-protocol.md  dt-correctness-test-plan.md  dxvk-build.md  ida-workflow.md
docs/prior-art/: wsgf-widescreen-hack.md
ida/: README.md
research/: offsets.md  pe-analysis.md
research/findings/: .gitkeep  ai-script-vm.md  animation-system.md  aspect-ratio-fix.md  autonomous-save-load-probe-plan-2026-05-10.md  autonomous-test-loop-design.md  autonomous-test-loop-shipped-2026-05-10.md  bink-integration.md  camera-subsystem.md  coop-assembler-disassembler-scope-2026-05-12.md  coop-b710-b711-audit-brief-2026-05-12.md  coop-c1-investigation-2026-05-12.md  coop-cutscene-sync-2026-05-12.md  coop-dual-launch-bypass-2026-05-12.md  coop-filter-retirement-plan-2026-05-12.md  coop-live-test-observations-2026-05-12.md  coop-mod-input-gate-bug-2026-05-12.md  coop-mtr-remote-player-design-2026-05-12.md  coop-mtr-remote-player-interp-scaffold-2026-05-12.md  coop-mtr-remote-player-interp-test-driver-2026-05-12.md  coop-multiplayer-plan-2026-05-10.md  coop-phase-0a-audit-2026-05-10.md  coop-phase-0a-entity-factory-2026-05-10.md  coop-phase-0b-breadcrumb-trail-2026-05-10.md  coop-phase-0c-sx-command-catalog-2026-05-11.md  coop-phase-0d-test-harness-skeleton-2026-05-11.md  coop-phase-1-3-vs-1-4-ordering-2026-05-12.md  coop-phase-1-4b-net-session-2026-05-12.md  coop-phase-1-4d-auto-spawn-2026-05-12.md  coop-phase-1-6-input-routing-2026-05-12.md  coop-phase0-finding-f2-corrected-2026-05-11.md  coop-phase0-input-separation-point-2026-05-11.md  coop-phase0-live-test-findings-2026-05-11.md  coop-phase0-mp-install-site-2026-05-11.md  coop-phase0-replication-primitive-found-2026-05-11.md  coop-phase0b-save-system-architecture-2026-05-11.md  coop-phase1-design-2026-05-11.md  coop-strategy-audit-brief-2026-05-12.md  coop-tier3-design-2026-05-12.md  cvar-system.md  (+64 more)
src/mtr-asi/: CMakeLists.txt  README.md
src/mtr-asi/include/mtr/: cmdline_utils.h  coop_registry_mirror.h  coop_spawn_probe.h  coop_vibrate_route.h  dt_correctness.h  entity_kv.h  interp.h  msaa.h  npc_overlay.h  overlay_math.h  prop_overlay.h  protagonist_registry.h  save_system.h  sim_decouple.h  test_harness.h  trigger_overlay.h  version.h  widget_probe.h  windowmode.h
src/mtr-asi/include/mtr/coop/: engine_player.h  remote_player.h  remote_player_manager.h
src/mtr-asi/include/mtr/coop/input/: controlmapper_dev.h  per_entity_tick_hook.h
src/mtr-asi/include/mtr/coop/net/: net_session.h  remote_pose_packet.h
src/mtr-asi/src/: aspect_patch.cpp  camera_probe.cpp  cmdline_hook.cpp  cmdline_utils.cpp  console.cpp  crash_handler.cpp  cvar_dump.cpp  d3d9_hook.cpp  dinput_hook.cpp  dllmain.cpp  dt_correctness.cpp  entity_kv.cpp  fps_limit.cpp  freecam.cpp  input_hook.cpp  interp.cpp  level_select.cpp  log.cpp  menu.cpp  msaa.cpp  npc_overlay.cpp  peripheral_cull_probe.cpp  prop_overlay.cpp  save_system.cpp  scene_vis_log.cpp  screen_push.cpp  screenshot.cpp  sim_decouple.cpp  sprite_picking.cpp  sprite_probe.cpp  sprite_split.cpp  sprite_xform.cpp  state_key_probe.cpp  test_harness.cpp  trigger_overlay.cpp  ui_aspect_rules.cpp  vis_test_probe.cpp  widget_probe.cpp  windowmode.cpp
src/mtr-asi/src/coop/: coop_dual_launch.cpp  coop_registry_mirror.cpp  coop_spawn_probe.cpp  coop_vibrate_route.cpp  engine_player.cpp  protagonist_registry.cpp  remote_player.cpp  remote_player_manager.cpp
src/mtr-asi/src/coop/input/: controlmapper_dev.cpp  per_entity_tick_hook.cpp
src/mtr-asi/src/coop/net/: net_session.cpp  remote_pose_packet.cpp
src/mtr-asi/src/d3d9_hook/: camera_hooks.cpp  d3d9_internal.h  diag_hooks.cpp  sprite_hooks.cpp
src/mtr-asi/src/interp/: interp_halo.cpp  interp_internal.h  interp_npc.cpp  interp_player.cpp  interp_view.cpp
src/mtr-asi/src/menu/: menu_fps_overlay.cpp  menu_helpers.cpp  menu_internal.h  tab_camera.cpp  tab_debug.cpp  tab_performance.cpp  tab_picture.cpp  tab_tools.cpp  tab_world.cpp
src/mtr-asi/src/sim_decouple/: sim_decouple_internal.h  sim_decouple_telemetry.cpp  sim_decouple_throttle.cpp
tools/: README.md  bmp-to-png-thumb.ps1  build-dxvk.sh  build_standalone_exe.py  diff_dumps.py  extract_sx_identifiers.py  find_aspect_rva.py  find_mutex_holder.py  hunt_debug.py  hunt_debug_focus.py  inspect_pe.py  kill-wilbur.ps1  mouse-wake.ps1  patch_aspect.py  pe-info.ps1  run-coop-test.ps1  run-overnight.ps1  run-test.ps1  run_game.py  scan_strings.py  skip_intros.py  sx_identifiers.txt  validate-overlay-frames.ps1  verify_unpacked_pe.py
